src/objects/KB_Global_Search_And_Replace__c.object
<CustomObject>
    <fields>
        <fullName>Apex_BatchId__c</fullName>
        <label>Apex Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleId__c</fullName>
        <label>Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <label>Article Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Comments__c</fullName>
        <label>Exception Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Names__c</fullName>
        <label>Field Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <label>Knowledge Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishStatus__c</fullName>
        <label>PublishStatus</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_String__c</fullName>
        <label>Replacement String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <label>Search String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>KB Global Search And Replace</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ArticleNumber__c</columns>
        <columns>Field_Names__c</columns>
        <columns>Search_String__c</columns>
        <columns>Replacement_String__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>KB Global Search And Replace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KB Global Search And Replace</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>